--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <title>Contact</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
-  <link href="assets/img/logo1a.jpg" rel="icon">
-  <link href="assets/img/logo1a.jpg" rel="apple-touch-icon">
+    <link href="assets/img/logo1a.jpg" rel="icon" />
+    <link href="assets/img/logo1a.jpg" rel="apple-touch-icon" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
@@ -31,24 +31,25 @@
   </head>
 
   <body>
-   <header id="header" class="d-flex align-items-center">
-    <div class="container d-flex justify-content-between align-items-center">
-      <div class="logo">
-        <h1><a href="index.html">ಶ್ರೀ ಅಡವಿಮಠ</a></h1>
-      </div>
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="active" href="index.html">ಮುಖಪುಟ</a></li>
+    <header id="header" class="d-flex align-items-center">
+      <div class="container d-flex justify-content-between align-items-center">
+        <div class="logo">
+          <h1><a href="index.html">ಶ್ರೀ ಅಡವಿಮಠ</a></h1>
+        </div>
+        <nav id="navbar" class="navbar">
+          <ul>
+            <li><a href="index.html">ಮುಖಪುಟ</a></li>
             <!-- <li><a href="#about">About Us</a></li> -->
             <li><a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
             <li><a href="social-services.html">ಸಾಮಾಜಿಕ ಸೇವೆಗಳು</a></li>
-            <li><a href="activities.html">ಚಟುವಟಿಕೆಗಳು</a></li>
-            <li><a href="contact.html">ಸಂಪರ್ಕಿಸಿ</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-    </div>
-  </header>
+            <li><a href="gallery.html">ಗ್ಯಾಲರಿ</a></li>
+            <li><a class="active" href="contact.html">ಸಂಪರ್ಕಿಸಿ</a></li>
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav>
+        <!-- .navbar -->
+      </div>
+    </header>
     <main id="main">
       <!-- ======= Breadcrumbs ======= -->
       <section id="breadcrumbs" class="breadcrumbs">
@@ -71,7 +72,8 @@
                 <i class="bx bx-map"></i>
                 <h3>ವಿಳಾಸ</h3>
                 <p>
-                  ಅಡವಿಮಠ, ಪಡುಗೂರು, ಗುಂಡ್ಲುಪೇಟೆ ತಾಲ್ಲೂಕು, ಚಾಮರಾಜನಗರ ಜಿಲ್ಲೆ - ೫೭೧೧೨೩
+                  ಅಡವಿಮಠ, ಪಡುಗೂರು, ಗುಂಡ್ಲುಪೇಟೆ ತಾಲ್ಲೂಕು, ಚಾಮರಾಜನಗರ ಜಿಲ್ಲೆ -
+                  ೫೭೧೧೨೩
                 </p>
               </div>
             </div>
@@ -80,7 +82,9 @@
               <div class="info-box mb-4">
                 <i class="bx bx-envelope"></i>
                 <h3>ಇ-ಮೇಲ್</h3>
-                <p>adavimata@gmail.com</p>
+                <p>
+                  <a href="mailto:adavimata@gmail.com">adavimata@gmail.com</a>
+                </p>
               </div>
             </div>
 
@@ -88,7 +92,7 @@
               <div class="info-box mb-4">
                 <i class="bx bx-phone-call"></i>
                 <h3>ದೂರವಾಣಿ</h3>
-                <p>+91-9448602867</p>
+                <p><a href="tel:+91-9448602867">+91-9448602867</a></p>
               </div>
             </div>
           </div>
@@ -173,54 +177,74 @@
     </main>
     <!-- End #main -->
 
-   <footer id="footer">
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-6 footer-links">
-            <h4>ಉಪಯುಕ್ತ ಕೊಂಡಿಗಳು</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a class="active" href="index.html">ಮುಖಪುಟ</a></li>
-              <!-- <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">About Us</a></li> -->
-              <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="social-services.html">ಸಮಾಜಿಕ ಸೇವೆಗಳು</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="activities.html">ಚಟುವಟಿಕೆಗಳು</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">ಸಂಪರ್ಕಿಸಿ</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-4 col-md-6 footer-contact">
-            <h4>ಸಂಪರ್ಕಿಸಿ</h4>
-            <p>
-              ಅಡವಿಮಠ, ಪಡುಗೂರು<br>
-              ಗುಂಡ್ಲುಪೇಟೆ ತಾಲ್ಲೂಕು <br>
-              ಚಾಮರಾಜನಗರ ಜಿಲ್ಲೆ - ೫೭೧೧೨೩<br><br>
-              <strong>ಫೋನ್:</strong> +91-9448602867<br>
-              <strong>ಇ-ಮೇಲ್:</strong> adavimata@gmail.com<br>
-            </p>
+    <footer id="footer">
+      <div class="footer-top">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 col-md-6 footer-links">
+              <h4>ಉಪಯುಕ್ತ ಕೊಂಡಿಗಳು</h4>
+              <ul>
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="index.html">ಮುಖಪುಟ</a>
+                </li>
+                <!-- <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">About Us</a></li> -->
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="social-services.html">ಸಮಾಜಿಕ ಸೇವೆಗಳು</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="gallery.html">ಗ್ಯಾಲರಿ</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a class="active" href="contact.html">ಸಂಪರ್ಕಿಸಿ</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-4 col-md-6 footer-contact">
+              <h4>ಸಂಪರ್ಕಿಸಿ</h4>
+              <p>
+                ಅಡವಿಮಠ, ಪಡುಗೂರು<br />
+                ಗುಂಡ್ಲುಪೇಟೆ ತಾಲ್ಲೂಕು <br />
+                ಚಾಮರಾಜನಗರ ಜಿಲ್ಲೆ - ೫೭೧೧೨೩<br /><br />
+                <span class="red-text"><strong>ಫೋನ್:</strong></span>
+                <a href="tel:+91-9448602867">+91-9448602867</a><br />
+                <span class="red-text"><strong>ಇ-ಮೇಲ್:</strong></span>
+                <a href="mailto:adavimata@gmail.com">adavimata@gmail.com</a
+                ><br />
+              </p>
+            </div>
 
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-info">
-          <h3>ಶ್ರೀ ಅಡವಿಮಠ-ಸಾಮಾಜಿಕ ಜಾಲತಾಣಗಳು</h3>
-          <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            <div class="col-lg-4 col-md-6 footer-info">
+              <h3>ಶ್ರೀ ಅಡವಿಮಠ-ಸಾಮಾಜಿಕ ಜಾಲತಾಣಗಳು</h3>
+              <div class="social-links mt-3">
+                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="#" class="instagram"
+                  ><i class="bx bxl-instagram"></i
+                ></a>
+                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              </div>
             </div>
           </div>
-
         </div>
       </div>
-    </div>
 
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Adavimata</span></strong>. All Rights Reserved
+      <div class="container">
+        <div class="copyright">
+          &copy; Copyright <strong><span>Adavimata</span></strong
+          >. All Rights Reserved
+        </div>
       </div>
-    </div>
-  </footer><!-- End Footer -->
+    </footer>
+    <!-- End Footer -->
     <a
       href="#"
       class="back-to-top d-flex align-items-center justify-content-center"
