--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>ಶ್ರೀ ಅಡವಿಮಠ</title>
-  <meta content="" name="description">
+  <meta content="Adavimata, Padaguru" name="description">
   <meta content="" name="keywords">
   <link href="assets/img/logo1a.jpg" rel="icon">
   <link href="assets/img/logo1a.jpg" rel="apple-touch-icon">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -45,7 +47,7 @@
             <!-- <li><a href="#about">About Us</a></li> -->
             <li><a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
             <li><a href="social-services.html">ಸಾಮಾಜಿಕ ಸೇವೆಗಳು</a></li>
-            <li><a href="activities.html">ಚಟುವಟಿಕೆಗಳು</a></li>
+            <li><a href="gallery.html">ಗ್ಯಾಲರಿ</a></li>
             <li><a href="contact.html">ಸಂಪರ್ಕಿಸಿ</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -76,17 +78,17 @@
           <div class="carousel-item" style="background: url(assets/img/slide/slide5.jpg)">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated fanimate__adeInDown">ಶ್ರೀ ಗುರು ಮದ್ದಾನೇಶ್ವರರು</span></h2>
+                <h2 class="animate__animated fanimate__adeInDown">ಶ್ರೀ ಗುರು <span>ಮದ್ದಾನೇಶ್ವರರು</span></span></h2>
                 <p class="animate__animated animate__fadeInUp">ಶರಣು ಮದ್ದಾನೆಶಾಂತನೆ ಪ್ರವುಡರಾಜೇಂದ್ರ<br/>
 ಗುರುವ ನಿಮ್ಮಯ ನಾಮ ಕೇಳು ಮದ್ದಾನೆಯಂ
 ತರಿಸಿ ನಿಮ್ಮಯ ಸತ್ವ ನೋನೆಂಬುತ ಬಂದ ಪರಮಪುರುಷನೆ ಕೇಳೆನೆ
-ಹರಹರಾ ಭಿಕ್ಷುಕರ ಸತ್ವವನು ನೋಳ್ಳಡೇ
+ಹರಹರಾ ಭಿಕ್ಷುಕರ ಸತ್ವವನು ನೋಳ್ಳಡೇ<br/>
 ಹರುಷವಾಯಿತು ನಮಗೆ ಅವನರ್ತಿ ಸಲಿಸುವೆನು
-ತರಿಸ ಹೇಳಯ್ಯ ಮದದಂತಿಯನ್ನು ನೋಡುವೆನು ವೀರಣ್ಣ ಕೇಳೆಂದೆನು ||24
-ಎಂದ ಶಾಂತನ ನುಡಿಗೆ ಮದದಾನೆ ತರಿಸುತಂ
+ತರಿಸ ಹೇಳಯ್ಯ ಮದದಂತಿಯನ್ನು ನೋಡುವೆನು ವೀರಣ್ಣ ಕೇಳೆಂದೆನು ||24</p>
+<p class="animate__animated animate__fadeInUp">ಎಂದ ಶಾಂತನ ನುಡಿಗೆ ಮದದಾನೆ ತರಿಸುತಂ<br/>
 ಮುಂದೆ ನಿಲಿಸಲು ನೋಡಿ ಸೊಂಡಿಲವ ಪಿಡಿಕೊಂಡು
 ನಿಂದು ಝಂಕಿಸಲು ಗಡಗಡನೆ ಕಂಪಿಸುತ ಗಜ ಕೆಡೆದು ಭೂಮಿಗೆ ಬೀಳಲು
-ಇಂದ್ರ ನೋಡೆ ನಿನ್ನ ಅರ್ತಿಯನ್ನು ಸಲ್ಲಿಸಿದೆನು
+ಇಂದ್ರ ನೋಡೆ ನಿನ್ನ ಅರ್ತಿಯನ್ನು ಸಲ್ಲಿಸಿದೆನು<br/>
 ಮುಂದೆ ನಮ್ಮನು ಪ್ರಕಟಮಾಡಿದ ಶಿವನಪ್ಪಣೆ
 ಇಂದಾಯಿತೆಮಗೆ ನಾಗೇಶನೊಳು ಕೂಡುವೆವು ಎಂದು ಬಯಲಾಗಿ ಪೋದ||
 </p>
@@ -100,9 +102,9 @@
             <div class="carousel-container">
               <div class="carousel-content">
               <h2 class="animate__animated animate__fadeInDown"><span>ಶ್ರೀ ಶಿವಕುಮಾರಸ್ವಾಮಿಗಳವರು</span></h2>
-                <p class="animate__animated animate__fadeInUp"> <p>ಚೈತನ್ಯಂ ಶಾಶ್ವತಂ ಶಾಂತಂ ಪ್ರೋಮಾತೀತಂ ನಿರಂಜನಂ<br/>
+                <p class="animate__animated animate__fadeInUp"> ಚೈತನ್ಯಂ ಶಾಶ್ವತಂ ಶಾಂತಂ ಪ್ರೋಮಾತೀತಂ ನಿರಂಜನಂ<br/>
 ನಾದ ಬಿಂದು ಕಲಾತೀತಂ ತಸ್ಯೆ ಶ್ರೀ ಗುರವೇ ನಮಃ ||</p>
-
+<p class="animate__animated animate__fadeInUp">
 ನಿರಂಜನ ಪ್ರಣವ ಸ್ವರೂಪಿಗಳಾದ ಶ್ರೀ ಶಿವಕುಮಾರ ಸ್ವಾಮಿಗಳು ಪಡುಗೂರು
 ಅಡವೀಮಠದ ಗುರುಗಳು. ಈ ಮಹಾನುಭಾವರು ಮೂಡುಗೂರು ಮಠದ ಶಾಂತವೀರ
 ದೇವರು ಮತ್ತು ಗಿರಿಜಮ್ಮನವರ ಸುಪುತ್ರರಾಗಿ 25-6-1917ರಂದು ಜನಿಸಿದರು. ಬುದ್ದಿಯವರ
@@ -132,7 +134,7 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" id="about">
-        <h2 class="mb-4">‌ಶ್ರೀ ಮಠದ ಪರಿಚಯ</h2>
+        <h2 class="mb-4">‌<strong>ಶ್ರೀ ಮಠದ ಪರಿಚಯ</strong></h2>
         <div class="row">
           <div class="col-lg-6">
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
@@ -208,20 +210,21 @@
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">About Us</a></li> -->
               <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="social-services.html">ಸಮಾಜಿಕ ಸೇವೆಗಳು</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="activities.html">ಚಟುವಟಿಕೆಗಳು</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="gallery.html">ಗ್ಯಾಲರಿ</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact.html">ಸಂಪರ್ಕಿಸಿ</a></li>
             </ul>
           </div>
           <div class="col-lg-4 col-md-6 footer-contact">
             <h4>ಸಂಪರ್ಕಿಸಿ</h4>
             <p>
-              ಅಡವಿಮಠ, ಪಡುಗೂರು<br>
-              ಗುಂಡ್ಲುಪೇಟೆ ತಾಲ್ಲೂಕು <br>
-              ಚಾಮರಾಜನಗರ ಜಿಲ್ಲೆ - ೫೭೧೧೨೩<br><br>
-              <strong>ಫೋನ್:</strong> +91-9448602867<br>
-              <strong>ಇ-ಮೇಲ್:</strong> adavimata@gmail.com<br>
+              ಅಡವಿಮಠ, ಪಡುಗೂರು<br />
+              ಗುಂಡ್ಲುಪೇಟೆ ತಾಲ್ಲೂಕು <br />
+              ಚಾಮರಾಜನಗರ ಜಿಲ್ಲೆ - ೫೭೧೧೨೩<br /><br />
+              <span class="red-text"><strong>ಫೋನ್:</strong></span>
+              <a href="tel:+91-9448602867">+91-9448602867</a><br />
+              <span class="red-text"><strong>ಇ-ಮೇಲ್:</strong></span>
+              <a href="mailto:adavimata@gmail.com">adavimata@gmail.com</a><br />
             </p>
-
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
