--- a/our-instituitions.html
+++ b/our-instituitions.html
@@ -42,11 +42,11 @@
       </div>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="active" href="index.html">ಮುಖಪುಟ</a></li>
+          <li><a  href="index.html">ಮುಖಪುಟ</a></li>
             <!-- <li><a href="#about">About Us</a></li> -->
-            <li><a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
+            <li><a class="active" href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
             <li><a href="social-services.html">ಸಾಮಾಜಿಕ ಸೇವೆಗಳು</a></li>
-            <li><a href="activities.html">ಚಟುವಟಿಕೆಗಳು</a></li>
+            <li><a href="gallery.html">ಗ್ಯಾಲರಿ</a></li>
             <li><a href="contact.html">ಸಂಪರ್ಕಿಸಿ</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -80,13 +80,11 @@
 
           <div class="row mb-5">
             <div class="col-lg-6">
-              <img src="assets/img/school.jpg" class="img-fluid" alt="" />
-            </div>
-            <div class="col-lg-6">
-              <img src="assets/img/mahamane.jpg" class="img-fluid" alt="" />
+              <p><img src="assets/img/school.jpg" class="img-fluid" alt="" /></p>
+              <p><img src="assets/img/mahamane.jpg" class="img-fluid" alt="" /></p>
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
-              <h3>ಶ್ರೀ‌ ಮದ್ದಾನೇಶ್ವರ ಶಿಕ್ಷಣ ಸಂಸ್ಥೆಗಳು</h3>
+              <h3><span class="red-text">ಶ್ರೀ‌ ಮದ್ದಾನೇಶ್ವರ ಶಿಕ್ಷಣ ಸಂಸ್ಥೆಗಳು</span></h3>
               <p class="fst-italic">
                ಶ್ರೀ ಶಿವಲಿಂಗೇಂದ್ರಸ್ವಾಮಿಗಳು ಪಡುಗೂರು ಮಠದ ಕಿರಿಯ ಶ್ರೀಗಳಾಗಿ ಶ್ರೀ
 ಶಿವಕುಮಾರಸ್ವಾಮಿಗಳ ಮಾರ್ಗದರ್ಶನದಲ್ಲಿ ಕಾರ್ಯನಿರ್ವಹಿಸುತ್ತಾ ಬಂದರು. ಪಟ್ಟಾಧಿಕಾರ
@@ -100,7 +98,8 @@
 ಮೂಲಕ ಗುಂಡ್ಲುಪೇಟೆಯಲ್ಲಿ ನರ್ಸರಿ, ಕಿರಿಯ ಮತ್ತು 
 
 ಹಿರಿಯ ಪ್ರಾಥಮಿಕ ಶಾಲೆಗಳನ್ನು
-ತೆರೆದರು. ಇವುಗಳ ಜೊತೆಗೆ 2007ನೇ ವರ್ಷದಲ್ಲಿ 'ಮಹಾಮನೆ' ಎಂಬ ಹೆಸರಿನಲ್ಲಿ ಉಚಿತ
+ತೆರೆದರು.</p> 
+<p>ಇವುಗಳ ಜೊತೆಗೆ 2007ನೇ ವರ್ಷದಲ್ಲಿ 'ಮಹಾಮನೆ' ಎಂಬ ಹೆಸರಿನಲ್ಲಿ ಉಚಿತ
 ಶಿಕ್ಷಣಯೋಜನೆಯನ್ನು ಕೈಗೊಂಡು ಎಲ್ಲಾ ವರ್ಗದ ಬಡವ ಮತ್ತು ಪ್ರತಿಭಾವಂತ
 ವಿದ್ಯಾರ್ಥಿಗಳಿಗಾಗಿ ಒಂದರಿಂದ 10ನೇ ತರಗತಿಯವರೆಗೆ ಶಿಕ್ಷಣ ನೀಡಬೇಕೆಂಬ ನಿರ್ಧಾರವನ್ನು
 ಮಾಡಿ ಅದರಂತೆ ಈವರೆಗೂ ನಡೆಸುತ್ತಾ ಬಂದಿದ್ದಾರೆ. ಮಹಾಮನೆಯಲ್ಲಿ ಈಗ 65
@@ -112,11 +111,8 @@
 ಸಭೆಯ ಅಧ್ಯಕ್ಷತೆಯನ್ನು ಗುಂಡ್ಲುಪೇಟೆ ಕ್ಷೇತ್ರದ ಶಾಸಕರಾದ ಶ್ರೀ ಹೆಚ್.ಎಸ್.
 ಮಹದೇವಪ್ರಸಾದ್ರವರು ವಹಿಸಿದ್ದರು. ಚಾಮರಾಜನಗರ ಕ್ಷೇತ್ರದ ಸಂಸದರಾದ ಶ್ರೀ
 ಧ್ರುವನಾರಾಯಣ್ರವರು ಹಾಗೂ ಸಚಿವರಾದ ಹಾಲಪ್ಪನವರು ತಾಲ್ಲೂಕಿನ ಮುಖಂಡರಾದ
-ಶ್ರೀ ಸಿ.ಎಸ್.ನಿರಂಜನ ಕುಮಾರ್, ಶ್ರೀ ಎಂ.ಪಿ. 
-
-ವೃಷಭೇಂದ್ರಪ್ಪ ಮೊದಲಾದವರು ಮುಖ್ಯ
+ಶ್ರೀ ಸಿ.ಎಸ್.ನಿರಂಜನ ಕುಮಾರ್, ಶ್ರೀ ಎಂ.ಪಿ.ವೃಷಭೇಂದ್ರಪ್ಪ ಮೊದಲಾದವರು ಮುಖ್ಯ
 ಅತಿಥಿಗಳಾಗಿ ಭಾಗವಹಿಸಿದ್ದರು.
-
               </p>
             </div>
           </div>
@@ -140,24 +136,25 @@
           <div class="col-lg-4 col-md-6 footer-links">
             <h4>ಉಪಯುಕ್ತ ಕೊಂಡಿಗಳು</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a class="active" href="index.html">ಮುಖಪುಟ</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">ಮುಖಪುಟ</a></li>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">About Us</a></li> -->
-              <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a class="active"href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="social-services.html">ಸಮಾಜಿಕ ಸೇವೆಗಳು</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="activities.html">ಚಟುವಟಿಕೆಗಳು</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="gallery.html">ಗ್ಯಾಲರಿ</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact.html">ಸಂಪರ್ಕಿಸಿ</a></li>
             </ul>
           </div>
           <div class="col-lg-4 col-md-6 footer-contact">
             <h4>ಸಂಪರ್ಕಿಸಿ</h4>
             <p>
-              ಅಡವಿಮಠ, ಪಡುಗೂರು<br>
-              ಗುಂಡ್ಲುಪೇಟೆ ತಾಲ್ಲೂಕು <br>
-              ಚಾಮರಾಜನಗರ ಜಿಲ್ಲೆ - ೫೭೧೧೨೩<br><br>
-              <strong>ಫೋನ್:</strong> +91-9448602867<br>
-              <strong>ಇ-ಮೇಲ್:</strong> adavimata@gmail.com<br>
+              ಅಡವಿಮಠ, ಪಡುಗೂರು<br />
+              ಗುಂಡ್ಲುಪೇಟೆ ತಾಲ್ಲೂಕು <br />
+              ಚಾಮರಾಜನಗರ ಜಿಲ್ಲೆ - ೫೭೧೧೨೩<br /><br />
+              <span class="red-text"><strong>ಫೋನ್:</strong></span>
+              <a href="tel:+91-9448602867">+91-9448602867</a><br />
+              <span class="red-text"><strong>ಇ-ಮೇಲ್:</strong></span>
+              <a href="mailto:adavimata@gmail.com">adavimata@gmail.com</a><br />
             </p>
-
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
