--- a/social-services.html
+++ b/social-services.html
@@ -6,8 +6,8 @@
     <title>Social Services</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
-  <link href="assets/img/logo1a.jpg" rel="icon">
-  <link href="assets/img/logo1a.jpg" rel="apple-touch-icon">
+    <link href="assets/img/logo1a.jpg" rel="icon" />
+    <link href="assets/img/logo1a.jpg" rel="apple-touch-icon" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
@@ -32,23 +32,26 @@
 
   <body>
     <header id="header" class="d-flex align-items-center">
-    <div class="container d-flex justify-content-between align-items-center">
-      <div class="logo">
-        <h1><a href="index.html">ಶ್ರೀ ಅಡವಿಮಠ</a></h1>
-      </div>
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="active" href="index.html">ಮುಖಪುಟ</a></li>
+      <div class="container d-flex justify-content-between align-items-center">
+        <div class="logo">
+          <h1><a href="index.html">ಶ್ರೀ ಅಡವಿಮಠ</a></h1>
+        </div>
+        <nav id="navbar" class="navbar">
+          <ul>
+            <li><a href="index.html">ಮುಖಪುಟ</a></li>
             <!-- <li><a href="#about">About Us</a></li> -->
             <li><a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
-            <li><a href="social-services.html">ಸಾಮಾಜಿಕ ಸೇವೆಗಳು</a></li>
-            <li><a href="activities.html">ಚಟುವಟಿಕೆಗಳು</a></li>
+            <li>
+              <a class="active" href="social-services.html">ಸಾಮಾಜಿಕ ಸೇವೆಗಳು</a>
+            </li>
+            <li><a href="gallery.html">ಗ್ಯಾಲರಿ</a></li>
             <li><a href="contact.html">ಸಂಪರ್ಕಿಸಿ</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-    </div>
-  </header>
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav>
+        <!-- .navbar -->
+      </div>
+    </header>
 
     <main id="main">
       <section id="breadcrumbs" class="breadcrumbs">
@@ -83,35 +86,28 @@
             </div>
 
             <div class="col-lg-4">
-              <!-- <div class="portfolio-info">
-                <h3>Social Services</h3>
-                <ul>
-                  <li><strong>Category</strong>: Web design</li>
-                  <li><strong>Client</strong>: ASU Company</li>
-                  <li><strong>Project date</strong>: 01 March, 2020</li>
-                  <li>
-                    <strong>Project URL</strong>:
-                    <a href="#">www.example.com</a>
-                  </li>
-                </ul>
-              </div> -->
               <div class="portfolio-description">
-                <h2>ಉಚಿತ ಶಿಕ್ಷಣ - ಮಹಾಮನೆ</h2>
+                <h2><span class="red-text">ಉಚಿತ ಶಿಕ್ಷಣ - ಮಹಾಮನೆ</span></h2>
                 <p>
-                  ೨೦೦೭ ನೇ ವರ್ಷದಲ್ಲಿ ʼಮಹಾಮನೆʼ ಎಂಬ ಹೆಸರಿನಲ್ಲಿ ಉಚಿತ ಶಿಕ್ಷಣಯೋಜನೆಯನ್ನು ಕ್ಯೆಗೊಂಡು ಎಲ್ಲಾ ವರ್ಗದ ಬಡವ ಮತ್ತು ಪ್ರತಿಭಾವಂತ ವಿಧ್ಯಾರ್ಥಿಗಳಿಗಾಗಿ 
-                  ೧ ರಿಂದ ೧೦ ನೇ ತರಗತಿಯವರೆಗೆ ಶಿಕ್ಷಣ ನೀಡಬೇಕೆಂಬ ನಿರ್ಧಾರವನ್ನು ಮಾಡಿ ಅದರಂತೆ ಈವರೆಗೂ ನಡೆಸುತ್ತಾ ಬಂದ್ದಿದ್ದಾರೆ.
-                </p>
-              </div>
-               <div class="portfolio-description">
-                <h2>ವ್ರದ್ಧಾಶ್ರಮ - ಹಿರಿಯರ ಮನೆ</h2>
-                <p>
-                  ೨೦೨೨ ನೇ ವರ್ಷದಲ್ಲಿ ʼಹಿರಿಯರ ಮನೆʼ ಎಂಬ ಹೆಸರಿನಲ್ಲಿ ವ್ರದ್ಧಾಶ್ರಮವನ್ನು ಫ್ರಾರಂಭಿಸಿದ್ದಾರೆ. ಇದು ಮಠದ ಆವರಣದಲ್ಲಿದ್ದು, ವಯೋವ್ರದ್ಧರಿಗಾಗಿ ಸಕಲ ಸೌಲಭ್ಯಗಳನ್ನು ಒಳಗೊಂಡಿದೆ.
+                  ೨೦೦೭ ನೇ ವರ್ಷದಲ್ಲಿ ʼಮಹಾಮನೆʼ ಎಂಬ ಹೆಸರಿನಲ್ಲಿ ಉಚಿತ
+                  ಶಿಕ್ಷಣಯೋಜನೆಯನ್ನು ಕ್ಯೆಗೊಂಡು ಎಲ್ಲಾ ವರ್ಗದ ಬಡವ ಮತ್ತು ಪ್ರತಿಭಾವಂತ
+                  ವಿಧ್ಯಾರ್ಥಿಗಳಿಗಾಗಿ ೧ ರಿಂದ ೧೦ ನೇ ತರಗತಿಯವರೆಗೆ ಶಿಕ್ಷಣ ನೀಡಬೇಕೆಂಬ
+                  ನಿರ್ಧಾರವನ್ನು ಮಾಡಿ ಅದರಂತೆ ಈವರೆಗೂ ನಡೆಸುತ್ತಾ ಬಂದ್ದಿದ್ದಾರೆ.
                 </p>
               </div>
               <div class="portfolio-description">
-                <h2>ಜಾನುವಾರುಗಳಿಗೆ ಅಸರೆ - ಗೋಶಾಲೆ</h2>
+                <h2><span class="red-text">ವ್ರದ್ಧಾಶ್ರಮ - ಹಿರಿಯರ ಮನೆ</span></h2>
                 <p>
-                  ಶ್ರೀ ಮಠವು ವ್ಯವಾಸಯದೊಂದಿಗೆ ಹಲವಾರು ವರ್ಷಗಳಿಂದ ಜಾನುವಾರುಗಳನ್ನು ಸಹ ಪೊಷಿಸುತ್ತಿದೆ.
+                  ೨೦೨೨ ನೇ ವರ್ಷದಲ್ಲಿ 'ಹಿರಿಯರ ಮನೆ' ಎಂಬ ಹೆಸರಿನಲ್ಲಿ ವ್ರದ್ಧಾಶ್ರಮವನ್ನು
+                  ಫ್ರಾರಂಭಿಸಿದ್ದಾರೆ. ಇದು ಮಠದ ಆವರಣದಲ್ಲಿದ್ದು, ವಯೋವ್ರದ್ಧರಿಗಾಗಿ ಸಕಲ
+                  ಸೌಲಭ್ಯಗಳನ್ನು ಒಳಗೊಂಡಿದೆ.
+                </p>
+              </div>
+              <div class="portfolio-description">
+                <h2><span class="red-text">ಜಾನುವಾರುಗಳಿಗೆ ಅಸರೆ - ಗೋಶಾಲೆ</span></h2>
+                <p>
+                  ಶ್ರೀ ಮಠವು ವ್ಯವಾಸಯದೊಂದಿಗೆ ಹಲವಾರು ವರ್ಷಗಳಿಂದ ಜಾನುವಾರುಗಳನ್ನು ಸಹ
+                  ಪೊಷಿಸುತ್ತಿದೆ.
                 </p>
               </div>
             </div>
@@ -120,51 +116,74 @@
       </section>
     </main>
     <footer id="footer">
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-6 footer-links">
-            <h4>ಉಪಯುಕ್ತ ಕೊಂಡಿಗಳು</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a class="active" href="index.html">ಮುಖಪುಟ</a></li>
-              <!-- <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">About Us</a></li> -->
-              <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="social-services.html">ಸಮಾಜಿಕ ಸೇವೆಗಳು</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="activities.html">ಚಟುವಟಿಕೆಗಳು</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">ಸಂಪರ್ಕಿಸಿ</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-4 col-md-6 footer-contact">
-            <h4>ಸಂಪರ್ಕಿಸಿ</h4>
-            <p>
-              ಅಡವಿಮಠ, ಪಡುಗೂರು<br>
-              ಗುಂಡ್ಲುಪೇಟೆ ತಾಲ್ಲೂಕು <br>
-              ಚಾಮರಾಜನಗರ ಜಿಲ್ಲೆ - ೫೭೧೧೨೩<br><br>
-              <strong>ಫೋನ್:</strong> +91-9448602867<br>
-              <strong>ಇ-ಮೇಲ್:</strong> adavimata@gmail.com<br>
-            </p>
-          </div>
+      <div class="footer-top">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 col-md-6 footer-links">
+              <h4>ಉಪಯುಕ್ತ ಕೊಂಡಿಗಳು</h4>
+              <ul>
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="index.html">ಮುಖಪುಟ</a>
+                </li>
+                <!-- <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">About Us</a></li> -->
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a class="active" href="social-services.html"
+                    >ಸಮಾಜಿಕ ಸೇವೆಗಳು</a
+                  >
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="gallery.html">ಗ್ಯಾಲರಿ</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="contact.html">ಸಂಪರ್ಕಿಸಿ</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-4 col-md-6 footer-contact">
+              <h4>ಸಂಪರ್ಕಿಸಿ</h4>
+              <p>
+                ಅಡವಿಮಠ, ಪಡುಗೂರು<br />
+                ಗುಂಡ್ಲುಪೇಟೆ ತಾಲ್ಲೂಕು <br />
+                ಚಾಮರಾಜನಗರ ಜಿಲ್ಲೆ - ೫೭೧೧೨೩<br /><br />
+                <span class="red-text"><strong>ಫೋನ್:</strong></span>
+                <a href="tel:+91-9448602867">+91-9448602867</a><br />
+                <span class="red-text"><strong>ಇ-ಮೇಲ್:</strong></span>
+                <a href="mailto:adavimata@gmail.com">adavimata@gmail.com</a
+                ><br />
+              </p>
+            </div>
 
-          <div class="col-lg-4 col-md-6 footer-info">
-          <h3>ಶ್ರೀ ಅಡವಿಮಠ-ಸಾಮಾಜಿಕ ಜಾಲತಾಣಗಳು</h3>
-          <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            <div class="col-lg-4 col-md-6 footer-info">
+              <h3>ಶ್ರೀ ಅಡವಿಮಠ-ಸಾಮಾಜಿಕ ಜಾಲತಾಣಗಳು</h3>
+              <div class="social-links mt-3">
+                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="#" class="instagram"
+                  ><i class="bx bxl-instagram"></i
+                ></a>
+                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              </div>
             </div>
           </div>
-
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Adavimata</span></strong>. All Rights Reserved
+      <div class="container">
+        <div class="copyright">
+          &copy; Copyright <strong><span>Adavimata</span></strong
+          >. All Rights Reserved
+        </div>
       </div>
-    </div>
-  </footer><!-- End Footer -->
+    </footer>
+    <!-- End Footer -->
     <a
       href="#"
       class="back-to-top d-flex align-items-center justify-content-center"
