--- a/gallery.html
+++ b/gallery.html
@@ -72,10 +72,10 @@
           <div class="row">
             <div class="col-lg-12 d-flex justify-content-center">
               <ul id="portfolio-flters">
-                <li data-filter="*" class="filter-active">All</li>
-                <li data-filter=".filter-app">App</li>
+                <!-- <li data-filter="*" class="filter-active">All</li> -->
+                <!-- <li data-filter=".filter-app">App</li>
                 <li data-filter=".filter-card">Card</li>
-                <li data-filter=".filter-web">Web</li>
+                <li data-filter=".filter-web">Web</li> -->
               </ul>
             </div>
           </div>
@@ -88,7 +88,7 @@
                   class="img-fluid"
                   alt=""
                 />
-                <div class="portfolio-info">
+                <!-- <div class="portfolio-info">
                   <h4>App 1</h4>
                   <p>App</p>
                   <div class="portfolio-links">
@@ -103,7 +103,7 @@
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -114,7 +114,7 @@
                   class="img-fluid"
                   alt=""
                 />
-                <div class="portfolio-info">
+                <!-- <div class="portfolio-info">
                   <h4>Web 3</h4>
                   <p>Web</p>
                   <div class="portfolio-links">
@@ -129,7 +129,7 @@
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -140,7 +140,7 @@
                   class="img-fluid"
                   alt=""
                 />
-                <div class="portfolio-info">
+                <!-- <div class="portfolio-info">
                   <h4>App 2</h4>
                   <p>App</p>
                   <div class="portfolio-links">
@@ -155,7 +155,7 @@
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -166,7 +166,7 @@
                   class="img-fluid"
                   alt=""
                 />
-                <div class="portfolio-info">
+                <!-- <div class="portfolio-info">
                   <h4>Card 2</h4>
                   <p>Card</p>
                   <div class="portfolio-links">
@@ -181,7 +181,7 @@
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -192,7 +192,7 @@
                   class="img-fluid"
                   alt=""
                 />
-                <div class="portfolio-info">
+                <!-- <div class="portfolio-info">
                   <h4>Web 2</h4>
                   <p>Web</p>
                   <div class="portfolio-links">
@@ -207,7 +207,7 @@
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -218,7 +218,7 @@
                   class="img-fluid"
                   alt=""
                 />
-                <div class="portfolio-info">
+                <!-- <div class="portfolio-info">
                   <h4>App 3</h4>
                   <p>App</p>
                   <div class="portfolio-links">
@@ -233,7 +233,7 @@
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -244,7 +244,7 @@
                   class="img-fluid"
                   alt=""
                 />
-                <div class="portfolio-info">
+                <!-- <div class="portfolio-info">
                   <h4>Card 1</h4>
                   <p>Card</p>
                   <div class="portfolio-links">
@@ -259,7 +259,7 @@
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -270,7 +270,7 @@
                   class="img-fluid"
                   alt=""
                 />
-                <div class="portfolio-info">
+                <!-- <div class="portfolio-info">
                   <h4>Card 3</h4>
                   <p>Card</p>
                   <div class="portfolio-links">
@@ -285,7 +285,7 @@
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -296,7 +296,7 @@
                   class="img-fluid"
                   alt=""
                 />
-                <div class="portfolio-info">
+                <!-- <div class="portfolio-info">
                   <h4>Web 3</h4>
                   <p>Web</p>
                   <div class="portfolio-links">
@@ -311,7 +311,7 @@
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -331,7 +331,7 @@
               <ul>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a class="active" href="index.html">ಮುಖಪುಟ</a>
+                  <a href="index.html">ಮುಖಪುಟ</a>
                 </li>
                 <!-- <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">About Us</a></li> -->
                 <li>
@@ -344,7 +344,7 @@
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a href="gallery.html">ಗ್ಯಾಲರಿ</a>
+                  <a class="active" href="gallery.html">ಗ್ಯಾಲರಿ</a>
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
