--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
               ತಮ್ಮ ದಿವ್ಯ ಶಕ್ತಿಯಿಂದ ಶಾಂತವಾಗಿಸಿ ತಮ್ಮ ಮುಂದೆ ಮಂಡಿಯೂರಿ ಕುಳಿತುಕೊಳ್ಳುವಂತೆ ಮಾಡಿ, ಅದರ ಮೇಲೆ
               ಕುಳಿತು ತೆರಕಣಾಂಬಿಯ ರಾಜ ಬೀದಿಗಳಲ್ಲಿ ಸಂಚರಿಸುವುದನ್ನು ಕಂಡು ಜಗಪತಿರಾಯ ದಿ‌ಗ್ಭ್ರಮೆಗ್ಗ್ಗೊಳ್ಳುತ್ತಾನೆ.
               ಶಿವಯೋಗಿಯ ಶಕ್ತಿ ಕಂಡು ಜಗಪತಿರಾಯನೂ ಹಾಗೂ ಆತನ ಧರ್ಮಪತ್ನಿಯಾದ ರಾಣಿ ಅಂಬಿಕೆ (ಈಕೆ ಗುಪ್ತವಾಗಿ
-              ಶಿವಭಕ್ತ) ಯೂ ಶರಣ ಧರ್ಮವಲಂಬಿಯಾಗಿ ದೀಕ್ಷೆ ಸ್ವೀಕರಿಸುತ್ತಾರೆ. ಶಿವಯೋಗಿಗಳು ಶ್ರೀ ಮದ್ದಾನೇಶ್ವರರು ಎಂಬ
+              ಶಿವಭಕ್ತೆ) ಯೂ ಶರಣ ಧರ್ಮವಲಂಬಿಯಾಗಿ ದೀಕ್ಷೆ ಸ್ವೀಕರಿಸುತ್ತಾರೆ. ಶಿವಯೋಗಿಗಳು ಶ್ರೀ ಮದ್ದಾನೇಶ್ವರರು ಎಂಬ
               ಹೆಸರಿನಿಂದ ಪರಿಚಿತರಾಗುತ್ತಾ ಈಗಿನ ಪಡುಗೂರು ಗ್ರಾಮದ ಉತ್ತರಕ್ಕೆ ಇರುವ ಪ್ರದೇಶದಲ್ಲಿ ನೆಲೆ ನಿಲ್ಲುತ್ತಾರೆ. </p>
             <p>ನಂತರ ಹತ್ತಾರು ವರ್ಷಗಳ ಕಾಲ ಜೀವಿಸಿದ್ದ ಶ್ರೀ ಮದ್ದಾನೇಶ್ವರರು ಜನರಲ್ಲಿ ಧರ್ಮಜಾಗೃತಿಯನ್ನು ಮೂಡಿಸುತ್ತಾ ಅಲ್ಲೇ ಬಯಲಿನೊಳಗೆ ಬಯಲಾಗುತ್ತಾರೆ. ಈಗಲೂ ಸಹ ಅವರ ಗದ್ದುಗೆಯು ಜಾಗೃತ ಸ್ಥಳವಾಗಿದೆ. ಶ್ರೀ ಮಠಕ್ಕೆ ಸುತ್ತ
-            ಮುತ್ತಲಿನ ಜನರು ಶ್ರದ್ಧಾ ಭಕ್ತಿಗಳದ ನಡೆದುಕೊಳ್ಳುತ್ತಾರೆ.
+            ಮುತ್ತಲಿನ ಜನರು ಶ್ರದ್ಧಾ ಭಕ್ತಿಗಳಿಂದ ನಡೆದುಕೊಳ್ಳುತ್ತಾರೆ.
             ಶ್ರೀ ಮದ್ದಾನೇಶ್ವರರ ನಂತರ ಶ್ರೀ ಮಠದ ವಿರಕ್ತ ಪರಂಪರೆಯ ಪೀಠವನ್ನಲಂಕರಿಸಿದ ಶ್ರೀ
             ಶಿವಲಿಂಗಸ್ವಾಮಿಗಳು, ಶ್ರೀ ಜಡೆ ಸ್ವಾಮಿಗಳು, ಶ್ರೀ ಮಹಾಂತ ಸ್ವಾಮಿಗಳು, ಶ್ರೀ ವಿರಕ್ತ ಸ್ವಾಮಿಗಳು ಸಹ ಧರ್ಮ ಜಾಗೃತಿಯ ಕೈಂಕರ್ಯವನ್ನು ಮುಂದುವರಿಸಿಕೊಂಡು ಬಂದರು.
             </p>
