--- a/our-instituitions.html
+++ b/our-instituitions.html
@@ -80,8 +80,8 @@
 
           <div class="row mb-5">
             <div class="col-lg-6">
-              <p><img src="assets/img/school.jpg" class="img-fluid" alt="" /></p>
-              <p><img src="assets/img/mahamane.jpg" class="img-fluid" alt="" /></p>
+              <p><img src="assets/img/portfolio/school.jpg" class="img-fluid" alt="" /></p>
+              <p><img src="assets/img/portfolio/mahamane.jpg" class="img-fluid" alt="" /></p>
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
               <h3><span class="red-text">ಶ್ರೀ‌ ಮದ್ದಾನೇಶ್ವರ ಶಿಕ್ಷಣ ಸಂಸ್ಥೆಗಳು</span></h3>
