--- a/gallery.html
+++ b/gallery.html
@@ -84,7 +84,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-1.jpeg"
+                  src="assets/img/portfolio/BasavanaBagilu.jpg"
                   class="img-fluid"
                   alt=""
                 />
@@ -106,23 +106,23 @@
                 </div> -->
               </div>
             </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-2.jpg"
+                  src="assets/img/portfolio/mahadimane1.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <!-- <div class="portfolio-info">
-                  <h4>Web 3</h4>
-                  <p>Web</p>
+                  <h4>App 1</h4>
+                  <p>App</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-2.jpg"
+                      href="assets/img/portfolio/portfolio-1.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="Web 3"
+                      title="App 1"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a href="portfolio-details.html" title="More Details"
@@ -132,23 +132,361 @@
                 </div> -->
               </div>
             </div>
-
+             <div class="row portfolio-container">
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-3.jpeg"
+                  src="assets/img/portfolio/DasohaBhavana.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <!-- <div class="portfolio-info">
-                  <h4>App 2</h4>
+                  <h4>App 1</h4>
                   <p>App</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-3.jpeg"
+                      href="assets/img/portfolio/portfolio-1.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="App 2"
+                      title="App 1"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a href="portfolio-details.html" title="More Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/DyanaMantapa.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <!-- <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>App</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/portfolio-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 1"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a href="portfolio-details.html" title="More Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/Gaddige1.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <!-- <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>App</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/portfolio-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 1"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a href="portfolio-details.html" title="More Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/Kattada.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <!-- <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>App</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/portfolio-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 1"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a href="portfolio-details.html" title="More Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/Puskarani.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <!-- <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>App</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/portfolio-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 1"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a href="portfolio-details.html" title="More Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/Mahamane.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <!-- <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>App</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/portfolio-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 1"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a href="portfolio-details.html" title="More Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/OldAgeHome.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <!-- <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>App</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/portfolio-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 1"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a href="portfolio-details.html" title="More Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/NewGaddige1.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <!-- <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>App</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/portfolio-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 1"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a href="portfolio-details.html" title="More Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/Gaddige3.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <!-- <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>App</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/portfolio-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 1"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a href="portfolio-details.html" title="More Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/Kattada1.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <!-- <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>App</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/portfolio-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 1"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a href="portfolio-details.html" title="More Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/Mahadimane2.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <!-- <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>App</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/portfolio-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 1"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a href="portfolio-details.html" title="More Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/Gaddige2.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <!-- <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>App</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/portfolio-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 1"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a href="portfolio-details.html" title="More Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/Gaddige3.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <!-- <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>App</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/portfolio-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 1"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a href="portfolio-details.html" title="More Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+             <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/portfolio-1.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <!-- <div class="portfolio-info">
+                  <h4>App 1</h4>
+                  <p>App</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/portfolio-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 1"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a href="portfolio-details.html" title="More Details"
@@ -214,7 +552,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-6.jpg"
+                  src="assets/img/portfolio/portfolio-6.jpeg"
                   class="img-fluid"
                   alt=""
                 />
@@ -289,31 +627,6 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-              <div class="portfolio-wrap">
-                <img
-                  src="assets/img/portfolio/portfolio-9.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <!-- <div class="portfolio-info">
-                  <h4>Web 3</h4>
-                  <p>Web</p>
-                  <div class="portfolio-links">
-                    <a
-                      href="assets/img/portfolio/portfolio-9.jpg"
-                      data-gallery="portfolioGallery"
-                      class="portfolio-lightbox"
-                      title="Web 3"
-                      ><i class="bx bx-plus"></i
-                    ></a>
-                    <a href="portfolio-details.html" title="More Details"
-                      ><i class="bx bx-link"></i
-                    ></a>
-                  </div>
-                </div> -->
-              </div>
-            </div>
           </div>
         </div>
       </section>
