--- a/social-services.html
+++ b/social-services.html
@@ -69,17 +69,19 @@
             <div class="col-lg-8">
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide">
+                    <img src="assets/img/slide/OldAgeHome.jpg" alt="" />
+                  </div>
+
                   <div class="swiper-slide">
-                    <img src="assets/img/slide/mahamane1.jpg" alt="" />
+                    <img src="assets/img/slide/mahamane1a.jpg" alt="" />
                   </div>
 
                   <div class="swiper-slide">
                     <img src="assets/img/slide/farming.jpeg" alt="" />
                   </div>
 
-                  <div class="swiper-slide">
-                    <img src="assets/img/oldagehome.jpg" alt="" />
-                  </div>
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
@@ -106,7 +108,7 @@
               <div class="portfolio-description">
                 <h2><span class="red-text">ಜಾನುವಾರುಗಳಿಗೆ ಅಸರೆ - ಗೋಶಾಲೆ</span></h2>
                 <p>
-                  ಶ್ರೀ ಮಠವು ವ್ಯವಾಸಯದೊಂದಿಗೆ ಹಲವಾರು ವರ್ಷಗಳಿಂದ ಜಾನುವಾರುಗಳನ್ನು ಸಹ
+                  ಶ್ರೀ ಮಠವು ವ್ಯವಸಾಯದೊಂದಿಗೆ ಹಲವಾರು ವರ್ಷಗಳಿಂದ ಜಾನುವಾರುಗಳನ್ನು ಸಹ
                   ಪೊಷಿಸುತ್ತಿದೆ.
                 </p>
               </div>
