--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>ಶ್ರೀ ಅಡವಿಮಠ</title>
+  <title>ಶ್ರೀ ಅಡವಿಮಠ - ಮುಖಪುಟ</title>
   <meta content="Adavimata, Padaguru" name="description">
-  <meta content="" name="keywords">
+  <meta content="Adavimata Padaguru, mata, Adavimata, Gundlupete, maddaneshwara" name="keywords">
   <link href="assets/img/logo1a.jpg" rel="icon">
   <link href="assets/img/logo1a.jpg" rel="apple-touch-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
-        <h1><a href="index.html">ಶ್ರೀ ಅಡವಿಮಠ</a></h1>
+        <h1><img src="assets/img/logo1a.jpg" alt="Adavimata logo"/><a href="index.html">ಶ್ರೀ ಅಡವಿಮಠ</a></h1>
       </div>
       <nav id="navbar" class="navbar">
         <ul>
@@ -64,21 +64,21 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background: url(assets/img/slide/bg-1.jpg)">
+          <div class="carousel-item active slide-1">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">ಭಕ್ತರಿಗೆ <span>ಸುಸ್ವಾಗತ</span></h2>
-                <p class="animate__animated animate__fadeInUp">ಕಳಬೇಡ ಕೊಲಬೇಡ ಹುಸಿಯ ನುಡಿಯಲು ಬೇಡ ಮುನಿಯಬೇಡ ಅನ್ಯರಿಗೆ ಅಸಹ್ಯಪಡಬೇಡ ತನ್ನ ಬಣ್ಣಿಸಬೇಡ ಇದಿರ ಹಳಿಯಲು ಬೇಡ. ಇದೇ ಅಂತರಂಗಶುದ್ಧಿ ಇದೇ ಬಹಿರಂಗಶುದ್ಧಿ ಇದೇ ನಮ್ಮ ಕೂಡಲಸಂಗಮದೇವರನೊಲಿಸುವ ಪರಿ</p>
+                <h2 class="animate__animated animate__fadeInDown"><span>ಭಕ್ತರಿಗೆ ಸುಸ್ವಾಗತ</span></h2>
+                <p class="animate__animated animate__fadeInUp">ಕಳಬೇಡ ಕೊಲಬೇಡ ಹುಸಿಯ ನುಡಿಯಲು ಬೇಡ <br/>ಮುನಿಯಬೇಡ ಅನ್ಯರಿಗೆ ಅಸಹ್ಯಪಡಬೇಡ<br/> ತನ್ನ ಬಣ್ಣಿಸಬೇಡ ಇದಿರ ಹಳಿಯಲು ಬೇಡ. <br/>ಇದೇ ಅಂತರಂಗಶುದ್ಧಿ ಇದೇ ಬಹಿರಂಗಶುದ್ಧಿ ಇದೇ ನಮ್ಮ ಕೂಡಲಸಂಗಮದೇವರನೊಲಿಸುವ ಪರಿ</p>
                <!--- <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a> -->
               </div>
             </div>
           </div>
 
           <!-- Slide 2 -->
-          <div class="carousel-item" style="background: url(assets/img/slide/slide5.jpg)">
+          <div class="carousel-item slide-2">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated fanimate__adeInDown">ಶ್ರೀ ಗುರು <span>ಮದ್ದಾನೇಶ್ವರರು</span></span></h2>
+                <h2 class="animate__animated fanimate__adeInDown"> <span>ಶ್ರೀ ಗುರುಮದ್ದಾನೇಶ್ವರರು</span></span></h2>
                 <p class="animate__animated animate__fadeInUp">ಶರಣು ಮದ್ದಾನೆಶಾಂತನೆ ಪ್ರವುಡರಾಜೇಂದ್ರ<br/>
 ಗುರುವ ನಿಮ್ಮಯ ನಾಮ ಕೇಳು ಮದ್ದಾನೆಯಂ
 ತರಿಸಿ ನಿಮ್ಮಯ ಸತ್ವ ನೋನೆಂಬುತ ಬಂದ ಪರಮಪುರುಷನೆ ಕೇಳೆನೆ
@@ -92,13 +92,12 @@
 ಮುಂದೆ ನಮ್ಮನು ಪ್ರಕಟಮಾಡಿದ ಶಿವನಪ್ಪಣೆ
 ಇಂದಾಯಿತೆಮಗೆ ನಾಗೇಶನೊಳು ಕೂಡುವೆವು ಎಂದು ಬಯಲಾಗಿ ಪೋದ||
 </p>
-               <!-- <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>-->
               </div>
             </div>
           </div>
 
           <!-- Slide 3 -->
-          <div class="carousel-item" style="background: url(assets/img/slide/slide5.jpg)">
+          <div class="carousel-item slide-3">
             <div class="carousel-container">
               <div class="carousel-content">
               <h2 class="animate__animated animate__fadeInDown"><span>ಶ್ರೀ ಶಿವಕುಮಾರಸ್ವಾಮಿಗಳವರು</span></h2>
@@ -134,7 +133,7 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" id="about">
-        <h2 class="mb-4">‌<strong>ಶ್ರೀ ಮಠದ ಪರಿಚಯ</strong></h2>
+        <h2 class="mb-4 red-text">‌<strong>ಶ್ರೀ ಮಠದ ಪರಿಚಯ</strong></h2>
         <div class="row">
           <div class="col-lg-6">
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
