--- a/our-instituitions.html
+++ b/our-instituitions.html
@@ -38,7 +38,7 @@
     <header id="header" class="d-flex align-items-center">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
-        <h1><a href="index.html">ಶ್ರೀ ಅಡವಿಮಠ</a></h1>
+        <h1><img src="assets/img/logo1a.jpg" alt="Adavimata logo"/><a href="index.html">ಶ್ರೀ ಅಡವಿಮಠ</a></h1>
       </div>
       <nav id="navbar" class="navbar">
         <ul>
