--- a/social-services.html
+++ b/social-services.html
@@ -34,7 +34,12 @@
     <header id="header" class="d-flex align-items-center">
       <div class="container d-flex justify-content-between align-items-center">
         <div class="logo">
-          <h1><a href="index.html">ಶ್ರೀ ಅಡವಿಮಠ</a></h1>
+          <h1>
+            <img src="assets/img/logo1a.jpg" alt="Adavimata logo" /><a
+              href="index.html"
+              >ಶ್ರೀ ಅಡವಿಮಠ</a
+            >
+          </h1>
         </div>
         <nav id="navbar" class="navbar">
           <ul>
@@ -69,8 +74,7 @@
             <div class="col-lg-8">
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
+                  <div class="swiper-slide">
                     <img src="assets/img/slide/OldAgeHome.jpg" alt="" />
                   </div>
 
@@ -81,7 +85,6 @@
                   <div class="swiper-slide">
                     <img src="assets/img/slide/farming.jpeg" alt="" />
                   </div>
-
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
@@ -106,7 +109,9 @@
                 </p>
               </div>
               <div class="portfolio-description">
-                <h2><span class="red-text">ಜಾನುವಾರುಗಳಿಗೆ ಅಸರೆ - ಗೋಶಾಲೆ</span></h2>
+                <h2>
+                  <span class="red-text">ಜಾನುವಾರುಗಳಿಗೆ ಅಸರೆ - ಗೋಶಾಲೆ</span>
+                </h2>
                 <p>
                   ಶ್ರೀ ಮಠವು ವ್ಯವಸಾಯದೊಂದಿಗೆ ಹಲವಾರು ವರ್ಷಗಳಿಂದ ಜಾನುವಾರುಗಳನ್ನು ಸಹ
                   ಪೊಷಿಸುತ್ತಿದೆ.
